# toy_tensor

./: .gitignore  CMakeLists.txt  README.md
bindings/: pybind.cpp
examples/: linear_regression.py
include/: kernals.h
include/mytensor/: autograd.h  engine.h  kernals.h  ops.h  tensor.h  utils.h
include/mytensor/autograd/: addnode.h  autograd.h  matmulnode.h  mulnode.h
src/: autograd.cpp  engine.cpp  main.cpp  ops.cpp  tensor.cpp
src/autograd/: addnode.cpp  autograd.cpp  matmulnode.cpp  mulnode.cpp
tests/: test_autograd.cpp  test_integration.cpp  test_tensor.cpp
